@@ -60,7 +60,7 @@ typedef char* (*GetCharStarFromIntPtr)(void *);
 typedef void* (*OverridenMethodFn)(void *, const char *);
 typedef void (*InvokeMethodFn)(void *, void *, void *);
 typedef void* (*CreateInstanceFn)(const char *);
-typedef void (*InvokeCustomSlotFn)(void*, const char*, void*);
+typedef void (*InvokeCustomSlotFn)(void*, const char*, void*, void*);
 typedef bool (*IsSmokeClassFn)(void*);
 
 extern FromIntPtr FreeGCHandle;
